tests/ui/fail/incorrect_item/tuple_struct.rs
use mergeme::Merge;

#[derive(Merge)]
#[partial(PartialConfig)]
struct Config(bool, u8, Vec<String>);

fn main() {}
