tests/ui/fail/incorrect_item/tuple_struct.stderr
error: `#[derive(Merge)]` only works on named structs, not tuple structs
 --> tests/ui/fail/incorrect_item/tuple_struct.rs:4:1
  |
4 | / #[partial(PartialConfig)]
5 | | struct Config(bool, u8, Vec<String>);
  | |_____________________________________^
